--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,36 @@
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 		<title>Munch!App</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/../public/js/munch.js"></script>
+				<script src="/public/js/munch.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
+
+		<script>
+	$('#submit').on('click', function() {
+    event.preventDefault();
+    let food = {
+        name: $('#userInput').val(),
+        munched: false
+    };
+    $.ajax('/api/munch', {
+        type: 'POST',
+        data: food,
+    }).then(function(){
+        location.reload()
+    })
+};
+$('.devour').on('click', function() {
+    let id = $(this).data('id').trim();
+    let devoured = {munched: true};
+
+    $.ajax('api/munch' + id, {
+        type: 'PUT',
+        data: devoured
+    }).then(function(){
+        location.reload();
+    })
+};
+		</script>
 	</body>
 </html>
